--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,14 @@
 			<div class="container">
 				<div class="cidade">
 					<a href="#" title="">Brasília</a>
+					<nav>
+						<a href="#" title="">Goiania</a>
+						<a href="#" title="">São Paulo</a>
+						<a href="#" title="">Belo Horizonte</a>
+						<a href="#" title="">Natal</a>
+						<a href="#" title="">João Pessoa</a>
+						<a href="#" title="">Florianópolis</a>
+					</nav>
 				</div>
 				<nav>
 					<a href="#" title="">Associe-se</a>
@@ -42,9 +50,21 @@
 			</div>
 		</section>
 
-		<section id="search">
+		<section id="searchWrapper">
 			<div class="container">
-				
+				<div class="topBanner">
+					<img src="imgTemp/top-banner.png" alt="">
+				</div>
+				<div class="lang">
+					<a href="#" title="" class="active"><img src="img/flag-br.png" alt=""></a>
+					<a href="#" title=""><img src="img/flag-usa.png" alt=""></a>
+					<a href="#" title=""><img src="img/flag-es.png" alt=""></a>
+				</div>
+				<div class="search">
+					<h1>Pesquise no site</h1>
+					<input type="text" name="" value="" placeholder="" class="gf-icon-search">
+					<input type="submit" name="" value="&#xe619;">
+				</div>
 			</div>
 		</section>
 
@@ -56,7 +76,17 @@
 
 		<section id="menu">
 			<div class="container">
-				
+				<nav>
+					<a href="" title="">O Sindicato</a>
+					<a href="" title="">Serviços</a>
+					<a href="" title="">Sindicalizados</a>
+					<a href="" title="">Eventos</a>
+					<a href="" title="">Sala de imprensa</a>
+					<a href="" title="">Parceiros e convênios</a>
+					<a href="" title="">Envio de currículo</a>
+					<a href="" title="">Downloads</a>
+					<a href="" title="">Contatos</a>
+				</nav>
 			</div>
 		</section>
 	</header>
