--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -129,7 +129,7 @@ $ninesixty-class-separator: "_" !default
 // Styles Base
 // ------------------------------------------------------------------
 
-$corTexto: $cinza
+$corTexto: $cinzaEscuro
 $corLink: $corPrincipal
 $corLinkHover: $corPrincipalHover
 $corTitle: $preto
@@ -165,29 +165,29 @@ h1, h2, h3, h4, h5, h6
 	@include font(100)
 	color: $corTitle
 	margin-bottom: 20px
-	line-height: 110%
+	line-height: 120%
 	text-transform: uppercase
 
 
 
-$titleSize: 50px
+$titleSize: 44px
 h1
 	font-size: $titleSize
 
 h2
-	font-size: $titleSize - 15
+	font-size: $titleSize - 10
 
 h3
-	font-size: $titleSize - 20
+	font-size: $titleSize - 14
 
 h4
-	font-size: $titleSize - 24
+	font-size: $titleSize - 18
 
 h5
-	font-size: $titleSize - 28
+	font-size: $titleSize - 22
 
 h6
-	font-size: $titleSize - 32
+	font-size: $titleSize - 26
 
 
 
