--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,66 @@
+	<footer>
+		<img src="img/logo-sindeventos-footer.png" alt="">
+
+		<ul class="container">
+			<li>
+				<h1>eventos e notícias</h1>
+				<a href="#" title="">Lorem ipsum dolor</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+				<a href="#" title="">adipisicing elit</a>
+			</li>
+			<li>
+				<h1>serviços</h1>
+				<a href="#" title="">Lorem ipsum dolor</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+				<a href="#" title="">adipisicing elit</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+			</li>
+			<li>
+				<h1>sindicalizados</h1>
+				<a href="#" title="">Lorem ipsum dolor</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+			</li>
+			<li>
+				<h1>eventos e notícias</h1>
+				<a href="#" title="">Lorem ipsum dolor</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+				<a href="#" title="">adipisicing elit</a>
+			</li>
+			<li>
+				<h1>serviços</h1>
+				<a href="#" title="">Lorem ipsum dolor</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+				<a href="#" title="">adipisicing elit</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+			</li>
+			<li>
+				<h1>sindicalizados</h1>
+				<a href="#" title="">Lorem ipsum dolor</a>
+				<a href="#" title="">Sit amet, consectetur</a>
+			</li>
+		</ul>
 
 
-		<script src="js/libs/jquery-1.9.1.min.js"></script>
-		<script src="js/libs/waypoints.min.js"></script>
+	</footer>
+	<span class="direitos">@Todos os direitos reservados - sindicato de eventos do distrito federal</span>
 
-		<script src="js/script.js"></script>
+	<script src="js/libs/jquery-1.9.1.min.js"></script>
+	<script src="js/libs/waypoints.min.js"></script>
+	<script src="js/libs/jquery.cycle.all.3.0.3.min.js"></script>
+	<script src="js/libs/moment.min.js"></script>
+	<script src="js/libs/daterangepicker.js"></script>
 
-		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
-		<script>
-			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-			e.src='//www.google-analytics.com/analytics.js';
-			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-			ga('create','UA-XXXXX-X');ga('send','pageview');
-		</script>
-		-->
-	</body>
+	<script src="js/script.js"></script>
+
+	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
+	<script>
+		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+		function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+		e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+		e.src='//www.google-analytics.com/analytics.js';
+		r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+		ga('create','UA-XXXXX-X');ga('send','pageview');
+	</script>
+	-->
+</body>
 </html>
