--- a/sass/_formStyles.sass
+++ b/sass/_formStyles.sass
@@ -19,7 +19,7 @@ input[type="text"], select
 	font-size: 16px
 	line-height: 20px
 	padding: 8px 16px
-	border: 2px solid $corTexto
+	border: 2px solid $cinzaClaro
 	text-indent: 0
 	color: $corTexto
 	+border-radius(5px)
@@ -42,15 +42,17 @@ input[type="text"]
 	text-transform: uppercase
 	text-align: center
 	color: $textoBotao
-	background: rgba($corBotao, 0.8)
+	background: rgba($corBotao, 1)
+	opacity: 0.8
+	cursor: pointer
 	+box-sizing(border-box)
 	+border-radius(5px)
 	+box-shadow(rgba($black, 0.1) 0 -5px 0 inset)
 	+transition
 
 	&:hover
-		+box-shadow(rgba($black, 0.3) 0 -3px 0 inset)
-		background: rgba($corBotao, 1)
+		+box-shadow(rgba($black, 0.3) 0 -5px 0 inset)
+		opacity: 1
 
 
 @mixin select
@@ -60,7 +62,7 @@ input[type="text"]
 
 
 @mixin checkbox
-	background: $branco
+	background: $brancoCinza
 	width: 25px
 	height: 25px
 	+appearance(none)
@@ -72,7 +74,7 @@ input[type="text"]
 		+animate(pulseCheck)
 
 @mixin radio
-	background: $branco
+	background: $brancoCinza
 	width: 25px
 	height: 25px
 	+appearance(none)
