--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 	<footer>
-		<img src="img/logo-sindeventos-footer.png" alt="">
+		<img src="{{ site.url }}/img/logo-sindeventos-footer.png" alt="">
 
 		<ul class="container">
 			<li>
@@ -44,13 +44,13 @@
 	</footer>
 	<span class="direitos">@Todos os direitos reservados - sindicato de eventos do distrito federal</span>
 
-	<script src="js/libs/jquery-1.9.1.min.js"></script>
-	<script src="js/libs/waypoints.min.js"></script>
-	<script src="js/libs/jquery.cycle.all.3.0.3.min.js"></script>
-	<script src="js/libs/moment.min.js"></script>
-	<script src="js/libs/daterangepicker.js"></script>
+	<script src="{{ site.url }}/js/libs/jquery-1.9.1.min.js"></script>
+	<script src="{{ site.url }}/js/libs/waypoints.min.js"></script>
+	<script src="{{ site.url }}/js/libs/jquery.cycle.all.3.0.3.min.js"></script>
+	<script src="{{ site.url }}/js/libs/moment.min.js"></script>
+	<script src="{{ site.url }}/js/libs/daterangepicker.js"></script>
 
-	<script src="js/script.js"></script>
+	<script src="{{ site.url }}/js/script.js"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
 	<script>
