--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,122 @@
+			<section id="pesquisar" class="accordion widget">
+				<div class="accord-header">pesquisar por fornecedor</div>
+				<div class="accord-content">
+					<form action="" method="get" accept-charset="utf-8">
+						<select>
+							<option>Escolha o tipo de evento</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select>
+							<option>Características do evento</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select>
+							<option>Serviços oferecidos pelo evento</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select class="uf">
+							<option>UF</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select class="cidade">
+							<option>Cidade</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select class="bairro">
+							<option>Bairro</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+
+						<button type="">Pesquisar</button>
+					</form>
+				</div>
+
+				<div class="accord-header active">pesquisar por evento</div>
+				<div class="accord-content pesquisa">
+					<form action="" method="get" accept-charset="utf-8">
+						<select>
+							<option>Escolha o tipo de evento</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select>
+							<option>Características do evento</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select>
+							<option>Serviços oferecidos pelo evento</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select class="uf">
+							<option>UF</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select class="cidade">
+							<option>Cidade</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+						<select class="bairro">
+							<option>Bairro</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+
+						<div class="periodo">
+							<label for="dataPesquisa">Período</label>
+							<input type="text" name="dataPesquisa" id="dataPesquisa" value="" /> 
+						</div>
+
+						<button type="">Pesquisar</button>
+					</form>
+				</div>
+			</section>
+
 			<section id="enquete" class="widget">
 				<h1>Enquete</h1>
 				<h2>O que você acha da tabela de tarifas e impostos que o governo utiliza para alvarás para eventos, festas e espetáculos?</h2>
@@ -28,10 +147,9 @@
 
 			<section id="publicidade" class="widget">
 				<h1>Publicidade</h1>
-				<a href="#" title=""><img src="imgTemp/publicidade1.jpg"></a>
-				<a href="#" title=""><img src="imgTemp/publicidade2.jpg"></a>
-				<a href="#" title=""><img src="imgTemp/publicidade3.jpg"></a>
-				<a href="#" title=""><img src="imgTemp/publicidade1.jpg"></a>
+				<a href="#" title=""><img src="{{ site.url }}/imgTemp/publicidade1.jpg"></a>
+				<a href="#" title=""><img src="{{ site.url }}/imgTemp/publicidade2.jpg"></a>
+				<a href="#" title=""><img src="{{ site.url }}/imgTemp/publicidade3.jpg"></a>
 			</section>
 
 			<section id="newsletter" class="widget">
