--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -147,9 +147,9 @@
 
 			<section id="publicidade" class="widget">
 				<h1>Publicidade</h1>
-				<a href="#" title=""><img src="{{ site.url }}/imgTemp/publicidade1.jpg"></a>
-				<a href="#" title=""><img src="{{ site.url }}/imgTemp/publicidade2.jpg"></a>
-				<a href="#" title=""><img src="{{ site.url }}/imgTemp/publicidade3.jpg"></a>
+				<a href="#" title=""><img src="{{ site.url }}imgTemp/publicidade1.jpg"></a>
+				<a href="#" title=""><img src="{{ site.url }}imgTemp/publicidade2.jpg"></a>
+				<a href="#" title=""><img src="{{ site.url }}imgTemp/publicidade3.jpg"></a>
 			</section>
 
 			<section id="newsletter" class="widget">
