--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -15,7 +15,7 @@ $ninesixty-class-separator: "_" !default
 	width: $ninesixty-grid-width / $cols * $n - $gutter-width
 
 =grid-unit-base($gutter-width: $ninesixty-gutter-width)
-	display: inline
+	display: block
 	float: left
 	margin:
 		left: $gutter-width / 2
