--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -3,6 +3,17 @@
 // Mixins
 // ------------------------------------------------------------------
 
+@mixin clearfix
+	zoom: 1
+	overflow: visible
+	&:before, &:after
+		content: " "
+		display: table
+
+	&:after
+		clear: both
+
+
 @mixin transition($t:all)
 	@include transition-property($t)
 	@include transition-duration(.2s)
@@ -55,7 +66,7 @@
 	+box-shadow(rgba(0,0,0, 0.2) 0 1px 0 0 inset, rgba(255,255,255, 0.4) 0 -1px 0 0 inset)
 
 
-@mixin grayscale($gray:100%)
+@mixin desaturate($gray:100%)
 	filter: grayscale($gray)
 	-webkit-filter: grayscale($gray)
 	-moz-filter: grayscale($gray)
